--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -21,5 +20,6 @@
 
 ###> symfony/asset-mapper ###
 /public/assets/
+/public/uploads/
 /assets/vendor/
 ###< symfony/asset-mapper ###
